Breaking into child components

--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@microsoft/sp-webpart-base": "1.14.0",
     "office-ui-fabric-react": "7.174.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "@types/react": "16.9.51",
