--- a/src/webparts/meter/MeterWebPart.manifest.json
+++ b/src/webparts/meter/MeterWebPart.manifest.json
@@ -12,17 +12,28 @@
   // Components that allow authors to embed arbitrary script code should set this to true.
   // https://support.office.com/en-us/article/Turn-scripting-capabilities-on-or-off-1f2c515f-5d7e-448a-9fd7-835da935584f
   "requiresCustomScript": false,
-  "supportedHosts": ["SharePointWebPart", "TeamsPersonalApp", "TeamsTab", "SharePointFullPage"],
+  "supportedHosts": [
+    "SharePointWebPart",
+    "TeamsPersonalApp",
+    "TeamsTab",
+    "SharePointFullPage"
+  ],
   "supportsThemeVariants": true,
 
-  "preconfiguredEntries": [{
-    "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
-    "group": { "default": "Other" },
-    "title": { "default": "Meter" },
-    "description": { "default": "Meter description" },
-    "officeFabricIconFontName": "Page",
-    "properties": {
-      "description": "Meter"
+  "preconfiguredEntries": [
+    {
+      "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
+      "group": { "default": "Other" },
+      "title": { "default": "Meter" },
+      "description": { "default": "Meter description" },
+      "officeFabricIconFontName": "Page",
+      "properties": {
+        "description": "HelloWorld",
+        "test": "Multi-line text field",
+        "test1": true,
+        "test2": "2",
+        "test3": true
+      }
     }
-  }]
+  ]
 }
