--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@microsoft/sp-office-ui-fabric-core": "1.14.0",
     "@microsoft/sp-property-pane": "1.14.0",
     "@microsoft/sp-webpart-base": "1.14.0",
+    "bootstrap": "^5.1.3",
     "office-ui-fabric-react": "7.174.1",
     "react": "16.13.1",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "16.13.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
