--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-dom": "16.13.1",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1"
+    "redux-thunk": "^2.4.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "16.9.51",
